<resources>
    <string name="app_name">AmigoSpire</string>

    <!-- Strings related to login -->
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Registration</string>
    <string name="appName">AmigoSpire</string>
    <string name="signin_question">Already have an account?</string>
    <string name="signin">Sign in</string>
    <string name="signup">SIGN UP</string>

    <!-- registration screen -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="emailid">Email</string>
    <string name="dob">Date of birth</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="choose_area">Choose area</string>

    <string name="profession">Profession</string>
    <string name="choose_profession">Choose profession</string>

    <string name="specialization">Specialization</string>
    <string name="choose_specialization">Choose specialization</string>

    <string name="qualification">Highest Qualification</string>
    <string name="workplacename">Clinic/Office Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="city_name">City</string>
    <string name="choose_city_name">Choose city</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="title_activity_amigo_landing">Consultation On-Call</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="availability">Available to recieve calls</string>
    <string name="empty_notification">No Notifications</string>

    <string name="incoming_call">Incoming Call</string>

    <string name="charge_customer">Charge the customer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="username">Sayeed Ahmed Shariff</string>
    <string name="tell_us_hint">Tell us about your professional experience</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_white_list">WhiteListActivity</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>

    <string name="feedback">Feedback matters to us and we would look to promptly help,
    innovate, technical staff our self to make sure you are best at delivering your service</string>
    <string name="title_activity_profile_screen">ProfileScreenActivity</string>
</resources>
