<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" />

        <ImageButton
            android:id="@+id/set_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_pic"
            android:layout_alignEnd="@+id/user_pic"
            android:layout_alignRight="@+id/user_pic"
            android:src="@drawable/ic_photo_camera_black_36dp" />

        <TextView
            android:id="@+id/cityname"
            android:layout_below="@+id/user_pic"
            android:layout_width="@dimen/edittextwidth"
            android:layout_height="wrap_content"
            android:text="@string/choose_city_name"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/city"
            android:layout_width="@dimen/spinnerwidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityname"
            android:layout_marginTop="5dp"
            android:prompt="@string/city_name" />

        <TextView
            android:id="@+id/areaname"
            android:layout_below="@+id/city"
            android:layout_width="@dimen/edittextwidth"
            android:layout_height="wrap_content"
            android:text="@string/choose_area"
            android:layout_marginTop="15dp"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/area"
            android:layout_width="@dimen/spinnerwidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/areaname"
            android:layout_marginTop="5dp"
            android:prompt="@string/area" />

        <TextView
            android:id="@+id/profession_name"
            android:layout_below="@+id/area"
            android:layout_width="@dimen/edittextwidth"
            android:layout_height="wrap_content"
            android:text="@string/choose_profession"
            android:layout_marginTop="15dp"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/profession"
            android:layout_width="@dimen/spinnerwidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profession_name"
            android:layout_marginTop="5dp"
            android:prompt="@string/profession" />

        <TextView
            android:id="@+id/specialization_name"
            android:layout_below="@+id/profession"
            android:layout_width="@dimen/edittextwidth"
            android:layout_height="wrap_content"
            android:text="@string/choose_specialization"
            android:layout_marginTop="15dp"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/specialization"
            android:layout_width="@dimen/spinnerwidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/specialization_name"
            android:layout_marginTop="5dp"
            android:prompt="@string/specialization" />

        <EditText
            android:id="@+id/qualification"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/specialization"
            android:hint="Add highest qualification"
            android:layout_marginTop="@dimen/topmargin_spinner"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/workplace_name"
            android:layout_width="@dimen/edittextwidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qualification"
            android:ems="10"
            android:hint="@string/workplacename"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/topmargin_spinner"
            />

        <Button
            android:id="@+id/consultant_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workplace_name"
            android:layout_margin="@dimen/toppadding_edittext"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textSize="@dimen/signup_textsize" />
    </RelativeLayout>
</ScrollView>