<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_48dp"
        android:id="@+id/user_icon" />

    <TextView
        android:layout_toRightOf="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/username"
        android:textSize="@dimen/incoming_call_username_text_size"
        android:id="@+id/username"/>

    <TextView
        android:id="@+id/chargecustomer"
        android:paddingTop="15dp"
        android:layout_below="@+id/username"
        android:layout_toRightOf="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/charge_customer"
        android:textSize="@dimen/incoming_call_text_size"
        />

    <Button
        android:id="@+id/yesbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chargecustomer"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="75dp"
        android:text="@string/yes"/>

    <Button
        android:id="@+id/nobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chargecustomer"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="75dp"
        android:layout_toRightOf="@+id/yesbutton"
        android:text="@string/no"/>
</RelativeLayout>
